--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         table {
             border-collapse: collapse;
             width: 100%;
+            margin-top: 20px;
         }
 
         th, td {
@@ -29,9 +30,14 @@
         }
 
         .ujadat-div {
-            border: 1px solid #000;
-            padding: 10px;
-            width: 300px;
+            background-color: #f2f2f2;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            padding: 20px;
+            width: 250px;
+            font-size: 18px;
+            text-align:left;
+            float: left;
         }
     </style>
 </head>
@@ -41,11 +47,11 @@
     <div class="ujadat-div">
         <form method="post" action="{% url 'mentes' %}">
             {% csrf_token %}
-            <label for="vezetek_nev"> Vezeték név: </label>
+            <label for="vezetek_nev"> Vezetéknév: </label>
             <br>
             <input type="text" id="vezetek_nev" name="vezetek_nev" required>
             <br>
-            <label for="kereszt_nev"> Kereszt név: </label>
+            <label for="kereszt_nev"> Keresztnév: </label>
             <br>
             <input type="text" id="kereszt_nev" name="kereszt_nev" required>
             <br> <br>
@@ -57,7 +63,7 @@
             <br> <br>
         </form>
     </div>
-    <BR> <BR> <BR>
+    <BR>
 
     <div class="table-container">
         <table>
