A kulcsszám hiba javítása : egy "a" betűvel volt több html fájlban

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,9 +65,9 @@
             <br>
             <input type="text" id="kereszt_nev" name="kereszt_nev" required>
             <br> <br>
-            <label for="kulcs_szama"> A kulcs száma: </label>
+            <label for="kulcs_szam"> A kulcs száma: </label>
             <br>
-            <input type="text" id="kulcs_szama" name="kulcs_szama" required>
+            <input type="text" id="kulcs_szam" name="kulcs_szam" required>
             <br> <br>
             <input type="submit" id="mentes" value="MENTÉS">
             <br> <br>
