--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FŐOLDAL</title>
+    <title>FŐOLDAL- Nyilvántartás</title>
     <style>
         div {
              margin-bottom: 10px; /* Az összes div  */
@@ -11,15 +11,14 @@
         .table-container {
             width: 100%;
             overflow: auto;
-            max-height: 340px;
-
-
+            max-height: 305px;
         }
 
         table {
             border-collapse: collapse;
             width: 100%;
-            max-height: 340px;
+            max-height: 305px;
+            font-size: 18px;
         }
 
         th, td {
@@ -35,24 +34,56 @@
             z-index: 1;
         }
 
+        .elsosor-container {
+            display: flex;
+            justify-content: space-between; /* Ezzel egymás mellé kerülnek */
+        }
+
+
+        .elso-sor-1div {
+            font-size: 15px;
+            text-align: left;
+            padding-left: 10px;
+            padding-top: 5px;
+        }
+
+        .kiadott-kulcsok-szama-div {
+            background-color: #f2f2f2;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            width: 300px;
+            font-size: 15px;
+            text-align: left;
+            padding-left: 10px;
+            padding-top: 5px;
+            float: right;
+
+        }
+
         .ujadat-div {
             background-color: #f2f2f2;
             border: 1px solid #ccc;
             border-radius: 10px;
             width: 250px;
             font-size: 20px;
-            text-align:left;
-            float: left;
+            text-align: left;
             padding-left: 20px;
             padding-top: 10px;
         }
-
-
-
     </style>
 </head>
 <body>
-    <h1>Kulcsnyilvántartás</h1>
+
+    <div class="elsosor-container">
+        <div class="elso-sor-1div">
+            <h1>Kulcsnyilvántartás</h1>
+        </div>
+
+        <div class="kiadott-kulcsok-szama-div">
+            <p>A kiadott kulcsok száma:</p>
+        </div>
+    </div>
+
 
     <div class="ujadat-div">
         <form method="post" action="{% url 'mentes' %}">
@@ -73,7 +104,6 @@
             <br> <br>
         </form>
     </div>
-
 
     <div class="table-container">
         <table>
