--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,14 @@
             padding-left: 10px;
             padding-top: 5px;
             float: right;
+            height: 50px;
+        }
 
+        .kiadott-kulcsok-szama {
+           font-size: 35px;
+           color: red;
+           text-align: left;
+           white-space: normal; /* Alapértelmezett szóközök megjelenítése */
         }
 
         .ujadat-div {
@@ -70,13 +77,19 @@
             padding-left: 20px;
             padding-top: 10px;
         }
-
-        .kiadott-kulcsok-szama {
-           font-size: 35px;
-           color: red;
-           text-align: left;
-           white-space: normal; /* Alapértelmezett szóközök megjelenítése */
+        .masodiksor-container {
+            display: flex; /* Hozzáadva: Az elemek egymás mellé kerülnek */
+            justify-content: 10px; /* Az elemek közötti térköz */
+            margin-right: 10px;
         }
+        .masodik-kontener-2div-kulcsok {
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            width: 100%;
+            margin-left: 10px;
+        }
+
+
     </style>
 </head>
 <body>
@@ -91,25 +104,29 @@
         </div>
     </div>
 
-
-    <div class="ujadat-div">
-        <form method="post" action="{% url 'mentes' %}">
-            {% csrf_token %}
-            <label for="vezetek_nev"> Vezetéknév: </label>
-            <br>
-            <input type="text" id="vezetek_nev" name="vezetek_nev" required>
-            <br>
-            <label for="kereszt_nev"> Keresztnév: </label>
-            <br>
-            <input type="text" id="kereszt_nev" name="kereszt_nev" required>
-            <br> <br>
-            <label for="kulcs_szam"> A kulcs száma: </label>
-            <br>
-            <input type="text" id="kulcs_szam" name="kulcs_szam" required>
-            <br> <br>
-            <input type="submit" id="mentes" value="MENTÉS">
-            <br> <br>
-        </form>
+    <div class="masodiksor-container">
+        <div class="ujadat-div">
+            <form method="post" action="{% url 'mentes' %}">
+                {% csrf_token %}
+                <label for="vezetek_nev"> Vezetéknév: </label>
+                <br>
+                <input type="text" id="vezetek_nev" name="vezetek_nev" required>
+                <br>
+                <label for="kereszt_nev"> Keresztnév: </label>
+                <br>
+                <input type="text" id="kereszt_nev" name="kereszt_nev" required>
+                <br> <br>
+                <label for="kulcs_szam"> A kulcs száma: </label>
+                <br>
+                <input type="text" id="kulcs_szam" name="kulcs_szam" required>
+                <br> <br>
+                <input type="submit" id="mentes" value="MENTÉS">
+                <br> <br>
+            </form>
+        </div>
+        <div class="masodik-kontener-2div-kulcsok">
+            <p> kulcsok</p>
+        </div>
     </div>
 
     <div class="table-container">
