--- a/templates/index.html
+++ b/templates/index.html
@@ -3,94 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>FŐOLDAL- Nyilvántartás</title>
-    <style>
-        div {
-             margin-bottom: 10px; /* Az összes div  */
-        }
-
-        .table-container {
-            width: 100%;
-            overflow: auto;
-            max-height: 305px;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            max-height: 305px;
-            font-size: 18px;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-            position: sticky;
-            top: 0;
-            z-index: 1;
-        }
-
-        .elsosor-container {
-            display: flex;
-            justify-content: space-between; /* Ezzel egymás mellé kerülnek */
-        }
-
-
-        .elso-sor-1div {
-            font-size: 15px;
-            text-align: left;
-            padding-left: 10px;
-            padding-top: 5px;
-        }
-
-        .kiadott-kulcsok-szama-div {
-            background-color: #f2f2f2;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            width: 200px;
-            font-size: 15px;
-            text-align: left;
-            padding-left: 10px;
-            padding-top: 5px;
-            float: right;
-            height: 50px;
-        }
-
-        .kiadott-kulcsok-szama {
-           font-size: 35px;
-           color: red;
-           text-align: left;
-           white-space: normal; /* Alapértelmezett szóközök megjelenítése */
-        }
-
-        .ujadat-div {
-            background-color: #f2f2f2;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            width: 250px;
-            font-size: 20px;
-            text-align: left;
-            padding-left: 20px;
-            padding-top: 10px;
-        }
-        .masodiksor-container {
-            display: flex; /* Hozzáadva: Az elemek egymás mellé kerülnek */
-            justify-content: 10px; /* Az elemek közötti térköz */
-            margin-right: 10px;
-        }
-        .masodik-kontener-2div-kulcsok {
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            width: 100%;
-            margin-left: 10px;
-        }
-
-
-    </style>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
 </head>
 <body>
 
@@ -125,7 +39,7 @@
             </form>
         </div>
         <div class="masodik-kontener-2div-kulcsok">
-            <p> kulcsok</p>
+            <p>  </p>
         </div>
     </div>
 
