--- a/templates/index.html
+++ b/templates/index.html
@@ -8,72 +8,81 @@
 </head>
 <body>
 
-    <div class="elsosor-container">
-        <div class="elso-sor-1div">
-            <h1>Kulcsnyilvántartás</h1>
-        </div>
-
-        <div class="kiadott-kulcsok-szama-div{% if kiadott_kulcsok_szama > 0 %} piros-keret{% endif %}">
-            <p>Kiadott kulcsok száma: <span class="{% if kiadott_kulcsok_szama > 0 %}
-               piros-kiadott {% endif %}">{{ kiadott_kulcsok_szama }}</span></p>
-        </div>
-
+<div class="elsosor-container">
+    <div class="elso-sor-1div">
+        <h1>Kulcs nyilvántartás</h1>
     </div>
 
-    <div class="masodiksor-container">
-        <div class="ujadat-div">
-            <form method="post" action="{% url 'mentes' %}">
-                {% csrf_token %}
-                <label for="vezetek_nev"> Vezetéknév: </label>
-                <br>
-                <input type="text" id="vezetek_nev" name="vezetek_nev" required>
-                <br>
-                <label for="kereszt_nev"> Keresztnév: </label>
-                <br>
-                <input type="text" id="kereszt_nev" name="kereszt_nev" required>
-                <br> <br>
-                <label for="kulcs_szam"> A kulcs száma: </label>
-                <br>
-                <input type="text" id="kulcs_szam" name="kulcs_szam" required>
-                <br> <br>
-                <input type="submit" id="mentes" value="MENTÉS">
-                <br> <br>
-            </form>
-        </div>
-        <div class="masodik-kontener-2div-kulcsok">
-            <p>  </p>
-        </div>
+    <div class="kiadott-kulcsok-szama-div{% if kiadott_kulcsok_szama > 0 %} piros-keret{% endif %}">
+        <p>Kiadott kulcsok száma: <span class="{% if kiadott_kulcsok_szama > 0 %} piros-kiadott {% endif %}">{{ kiadott_kulcsok_szama }}</span></p>
     </div>
+</div>
 
-    <div class="table-container">
-        <table>
-            <thead>
-                <tr>
-                    <th>Vezetéknév</th>
-                    <th>Keresztnév</th>
-                    <th>Kulcs száma</th>
-                    <th>Felvette</th>
-                    <th>Visszahozta</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for item in nyilvantartas %}
-                <tr {% if item.visszaadva %} style="background-color: white;" {% else %} style="background-color: lightblue;" {% endif %}>
-                    <td>{{ item.vezetek_nev }}</td>
-                    <td>{{ item.kereszt_nev }}</td>
-                    <td>{{ item.kulcs_szam }}</td>
-                    <td>{{ item.datum }}</td>
-                    <td>
-                        {% if item.visszaadva %}
-                            {{ item.visszaadva }}
-                        {% else %}
-                            <a href="{% url 'visszaadva' item.pk %}"><input type="button" value="Visszaadva"></a>
-                        {% endif %}
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+<div class="masodiksor-container">
+    <div class="ujadat-div">
+        <form method="post" action="{% url 'mentes' %}">
+            {% csrf_token %}
+            <label for="vezetek_nev">Vezetéknév:</label>
+            <br>
+            <input type="text" id="vezetek_nev" name="vezetek_nev" required>
+            <br>
+            <label for="kereszt_nev">Keresztnév:</label>
+            <br>
+            <input type="text" id="kereszt_nev" name="kereszt_nev" required>
+            <br><br>
+            <label for="kulcs_szam">A kulcs száma:</label>
+            <br>
+            <input type="text" id="kulcs_szam" name="kulcs_szam" required>
+            <br><br>
+            <input type="submit" id="mentes" value="MENTÉS">
+            <br>
+            <div class="hiba">{% if messages %}
+    <div>
+        {% for message in messages %}
+        <p>{{ message }}</p>
+        {% endfor %}
     </div>
+{% endif %}
+</div>
+
+            <br>
+        </form>
+    </div>
+    <div class="masodik-kontener-2div-kulcsok">
+        <p>  </p>
+    </div>
+</div>
+
+<div class="table-container">
+    <table>
+        <thead>
+        <tr>
+            <th>Vezetéknév</th>
+            <th>Keresztnév</th>
+            <th>Kulcs száma</th>
+            <th>Felvette</th>
+            <th>Visszahozta</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for item in nyilvantartas %}
+        <tr {% if item.visszaadva %} style="background-color: white;" {% else %} style="background-color: lightblue;" {% endif %}>
+            <td>{{ item.vezetek_nev }}</td>
+            <td>{{ item.kereszt_nev }}</td>
+            <td>{{ item.kulcs_szam }}</td>
+            <td>{{ item.datum }}</td>
+            <td>
+                {% if item.visszaadva %}
+                    {{ item.visszaadva }}
+                {% else %}
+                    <a href="{% url 'visszaadva' item.pk %}"><input type="button" value="Visszaadva"></a>
+                {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+
 </body>
 </html>
