--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,16 @@
 <body>
 
 <div class="elsosor-container">
+
     <div class="elso-sor-1div">
         <h1>Kulcs nyilvántartás</h1>
+    </div>
+
+    <div class="qr_gomb">
+        <a href="link_celja.html">
+        <img src="static/qr_piros.webp" alt="QR beolvasas" width="59" height="59">
+    </a>
+
     </div>
 
     <div class="kiadott-kulcsok-szama-div{% if kiadott_kulcsok_szama > 0 %} piros-keret{% endif %}">
