QR-sikeres qr olvasás

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="qr_gomb">
-        <a href="link.html">
+        <a href="qr">
         <img src="static/qr_piros.webp" alt="QR beolvasas" width="59" height="59">
     </a>
 
