--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,18 @@
 <body>
 
 <div class="elsosor-container">
-
     <div class="elso-sor-1div">
         <h1>Kulcs nyilvántartás</h1>
     </div>
 
     <div class="qr_gomb">
-        <a href="qr">
-        <img src="static/qr_piros.webp" alt="QR beolvasas" width="59" height="59">
-    </a>
+        <a href="#" id="startKamera">
+            <img src="static/qr_piros.webp" alt="QR beolvasas" width="59" height="59">
+        </a>
+    </div>
 
+    <div class="kamera-kep" style="display: none;">
+        <video id="video" width="10%" autoplay></video>
     </div>
 
     <div class="kiadott-kulcsok-szama-div{% if kiadott_kulcsok_szama > 0 %} piros-keret{% endif %}">
@@ -75,10 +77,6 @@
         </div>
     {% endfor %}
 </div>
-
-
-
-
 </div>
 
 <div class="table-container">
@@ -111,6 +109,82 @@
         </tbody>
     </table>
 </div>
+
+<script src="https://cdn.rawgit.com/cozmo/jsQR/master/dist/jsQR.js"></script>
+<script>
+    const video = document.getElementById('video');
+    const kameraKep = document.querySelector('.kamera-kep');
+    const startKameraGomb = document.getElementById('startKamera');
+
+    let elsoKod = null;
+    let masodikKod = null;
+    let stream = null;
+
+    startKameraGomb.addEventListener('click', async () => {
+        if (!stream) {
+            stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+            video.srcObject = stream;
+            kameraKep.style.display = 'block';
+        }
+    });
+
+    video.addEventListener('play', () => {
+        const canvas = document.createElement('canvas');
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        const context = canvas.getContext('2d');
+
+        const scanQRCode = async () => {
+            context.drawImage(video, 0, 0, canvas.width, canvas.height);
+            const imageData = context.getImageData(0, 0, canvas.width, canvas.height);
+            const code = jsQR(imageData.data, imageData.width, imageData.height);
+
+            if (code && !elsoKod) {
+                // Az első QR kód beolvasása
+                elsoKod = code.data;
+
+                try {
+                    // Próbáljuk meg kinyerni az adatokat a QR kódból
+                    const qrAdatok = elsoKod.split(' ');
+                    const vezetek_nev = qrAdatok[0];
+                    const kereszt_nev = qrAdatok[1];
+                    const kulcs_szam = elsoKod;
+
+                    // Az űrlap mezőibe írjuk be az első QR kód adatait
+                    document.getElementById('kulcs_szam').value = kulcs_szam;
+                    document.getElementById('vezetek_nev').value = "";
+                    document.getElementById('kereszt_nev').value = "";
+                } catch (error) {
+                    console.error('Hiba történt az első QR kód tartalmának feldolgozásakor:', error);
+                }
+            } else if (code && !masodikKod && code.data !== elsoKod) {
+                // A második QR kód beolvasása (eltérő az elsőtől)
+                masodikKod = code.data;
+
+                try {
+                    // Próbáljuk meg kinyerni az adatokat a QR kódból
+                    const qrAdatok = masodikKod.split(' ');
+                    const vezetek_nev = qrAdatok[0];
+                    const kereszt_nev = qrAdatok[1];
+
+                    // Az űrlap mezőibe írjuk be a második QR kód adatait
+                    document.getElementById('vezetek_nev').value = vezetek_nev;
+                    document.getElementById('kereszt_nev').value = kereszt_nev;
+
+                    // Kamera leállítása és elrejtése
+                    stream.getTracks().forEach(track => track.stop());
+                    kameraKep.style.display = 'none';
+                } catch (error) {
+                    console.error('Hiba történt a második QR kód tartalmának feldolgozásakor:', error);
+                }
+            }
+
+            requestAnimationFrame(scanQRCode);
+        };
+
+        scanQRCode();
+    });
+</script>
 
 </body>
 </html>
